--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -58,36 +58,36 @@ block.sd-compensator.description = ...
 
 #units
 
-unit.sd-unit-aegis-beacon.name = Lunatic Crystal
-unit.sd-unit-aegis-beacon.description = A Unit Beacon that supports nearby units.
-unit.sd-unit-crawlers.name = Crawler
-unit.sd-unit-crawlers.description = Moves toward enemy targets and self-destructs, causing a large explosion.
-unit.sd-unit-eradicator-crystal.name = Eradicator
-unit.sd-unit-eradicator-crystal.description = This shouldn't be here...
-unit.sd-unit-honoriya-crystal.name = Honoriya
-unit.sd-unit-honoriya-crystal.description = The Warship.
-unit.sd-unit-lunatic-crystal.name = Lunatic Crystal
-unit.sd-unit-lunatic-crystal.description = A crawler mutated from the Crystals.
-unit.sd-unit-matter.name = Matter
-unit.sd-unit-matter.description = You are not supposed to see this.
-unit.sd-unit-no-name.name = 30 seconds before impact
-unit.sd-unit-no-name.description = No Name.
-unit.sd-unit-prototype-V.name = Prototype E-005V_h
-unit.sd-unit-prototype-V.description = Tier V of Prototype E-001_h.
-unit.sd-unit-prototype.name = Prototype E-001_h
-unit.sd-unit-prototype.description = An amalgamation created to destroy everything.
-unit.sd-unit-raid.name = Raid
-unit.sd-unit-raid.description = Fires powerful kinetic bullets and missiles that deals more damage to buildings.
-unit.sd-unit-reigns.name = Reign
-unit.sd-unit-reigns.description = Fires a barrage of massive piercing bullets at enemy targets.
-unit.sd-unit-server.name = Server
-unit.sd-unit-server.description = S.E.R.V.E.R
-unit.sd-unit-shielder.name = Shielder
-unit.sd-unit-shielder.description = A slow-paced unit that has a massive amount of damage reduction.
-unit.sd-unit-mutation.name = Mutation
-unit.sd-unit-mutation.description = not even units can save you.
-unit.sd-unit-mutation-II.name = Greg
-unit.sd-unit-mutation-II.description = Phase II of Unit Mutation.
+unit.sd-aegis-beacon.name = Lunatic Crystal
+unit.sd-aegis-beacon.description = A Unit Beacon that supports nearby units.
+unit.sd-crawlers.name = Crawler
+unit.sd-crawlers.description = Moves toward enemy targets and self-destructs, causing a large explosion.
+unit.sd-eradicator-crystal.name = Eradicator
+unit.sd-eradicator-crystal.description = This shouldn't be here...
+unit.sd-honoriya-crystal.name = Honoriya
+unit.sd-honoriya-crystal.description = The Warship.
+unit.sd-lunatic-crystal.name = Lunatic Crystal
+unit.sd-lunatic-crystal.description = A crawler mutated from the Crystals.
+unit.sd-matter.name = Matter
+unit.sd-matter.description = You are not supposed to see this.
+unit.sd-no-name.name = 30 seconds before impact
+unit.sd-no-name.description = No Name.
+unit.sd-prototype-V.name = Prototype E-005V_h
+unit.sd-prototype-V.description = Tier V of Prototype E-001_h.
+unit.sd-prototype.name = Prototype E-001_h
+unit.sd-prototype.description = An amalgamation created to destroy everything.
+unit.sd-raid.name = Raid
+unit.sd-raid.description = Fires powerful kinetic bullets and missiles that deals more damage to buildings.
+unit.sd-reigns.name = Reign
+unit.sd-reigns.description = Fires a barrage of massive piercing bullets at enemy targets.
+unit.sd-server.name = Server
+unit.sd-server.description = S.E.R.V.E.R
+unit.sd-shielder.name = Shielder
+unit.sd-shielder.description = A slow-paced unit that has a massive amount of damage reduction.
+unit.sd-mutation.name = Mutation
+unit.sd-mutation.description = not even units can save you.
+unit.sd-mutation-II.name = Greg
+unit.sd-mutation-II.description = Phase II of Unit Mutation.
 
 #end units
 
