--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -62,8 +62,8 @@ unit.sd-aegis-beacon.name = Lunatic Crystal
 unit.sd-aegis-beacon.description = A Unit Beacon that supports nearby units.
 unit.sd-crawlers.name = Crawler
 unit.sd-crawlers.description = Moves toward enemy targets and self-destructs, causing a large explosion.
-unit.sd-eradicator-crystal.name = Eradicator
-unit.sd-eradicator-crystal.description = This shouldn't be here...
+unit.sd-eradicator.name = Eradicator
+unit.sd-eradicator.description = This shouldn't be here...
 unit.sd-honoriya-crystal.name = Honoriya
 unit.sd-honoriya-crystal.description = The Warship.
 unit.sd-lunatic-crystal.name = Lunatic Crystal
@@ -84,10 +84,10 @@ unit.sd-server.name = Server
 unit.sd-server.description = S.E.R.V.E.R
 unit.sd-shielder.name = Shielder
 unit.sd-shielder.description = A slow-paced unit that has a massive amount of damage reduction.
-unit.sd-mutation.name = Mutation
-unit.sd-mutation.description = not even units can save you.
-unit.sd-mutation-II.name = Greg
-unit.sd-mutation-II.description = Phase II of Unit Mutation.
+unit.sd-unit-mutation.name = Mutation
+unit.sd-unit-mutation.description = not even units can save you.
+unit.sd-unit-mutation-II.name = Greg
+unit.sd-unit-mutation-II.description = Phase II of Unit Mutation.
 
 #end units
 
