--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -76,8 +76,8 @@ unit.sd-avalen.name = Avalen
 unit.sd-avalen.description = Fires powerful kinetic bullets and missiles that deals more damage to buildings.
 unit.sd-eradicator.name = Eradicator
 unit.sd-eradicator.description = This shouldn\u0027t be here...
-unit.sd-honoriya-crystal.name = Honoriya
-unit.sd-honoriya-crystal.description = The Warship.
+unit.sd-honoriya.name = Honoriya
+unit.sd-honoriya.description = The Warship.
 unit.sd-lunatic-crystal.name = Lunatic Crystal
 unit.sd-lunatic-crystal.description = A crawler mutated from the Crystals.
 unit.sd-matter.name = Matter
