--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -62,6 +62,10 @@ block.sd-serenite-crucible.name = Serenite Crucible
 block.sd-serenite-crucible.description = A crucible that crushes down Serenite Powder into pure Serenite.
 block.sd-compensator.name = Compensator
 block.sd-compensator.description = ...
+block.sd-arc-shielded-wall.name = Arc Shielded Wall
+block.sd-arc-shielded-wall.description = Improved version of Shielded Wall. Does not deflect bullets upon impact. Deploys a one-time use arc shield that absorbs most projectiles when power is provided. Conducts power.
+block.sd-serenity-wall.name = Serenity Wall
+block.sd-serenity-wall.description = A stronger version of Surge Wall, coated with Serenite. Conducts power.
 
 #end blocks
 
@@ -84,7 +88,7 @@ unit.sd-matter.name = Matter
 unit.sd-matter.description = You are not supposed to see this.
 unit.sd-no-name.name = 30 seconds before impact
 unit.sd-no-name.description = No Name.
-unit.sd-not-crawlers.name = Crawler
+unit.sd-not-crawler.name = Crawler
 unit.sd-not-crawler.description = Moves toward enemy targets and self-destructs, causing a large explosion.
 unit.sd-not-reign.name = Reign
 unit.sd-not-reign.description = Fires a barrage of massive piercing bullets at enemy targets.
@@ -94,7 +98,6 @@ unit.sd-prototype.name = Prototype E-001_h
 unit.sd-prototype.description = An amalgamation created to destroy everything.
 unit.sd-raid.name = Raid
 unit.sd-raid.description = Fires powerful kinetic bullets and missiles that deals more damage to buildings.
-
 unit.sd-server.name = Server
 unit.sd-server.description = S.E.R.V.E.R
 unit.sd-shielder.name = Shielder
