--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -62,6 +62,8 @@ block.sd-serenite-crucible.name = Serenite Crucible
 block.sd-serenite-crucible.description = A crucible that crushes down Serenite Powder into pure Serenite.
 block.sd-compensator.name = Compensator
 block.sd-compensator.description = ...
+block.sd-lighting-tower.name = Lighting Tower
+block.sd-lighting-tower.description = ...
 block.sd-arc-shielded-wall.name = Arc Shielded Wall
 block.sd-arc-shielded-wall.description = Improved version of Shielded Wall. Does not deflect bullets upon impact. Deploys a one-time use arc shield that absorbs most projectiles when power is provided. Conducts power.
 block.sd-serenity-wall.name = Serenity Wall
