--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,3 +1,4 @@
+
 #status
 
 status.sd-corruption.name = Corruption
@@ -22,6 +23,8 @@ item.sd-ellener-rod.description = An item that is used to build advanced structu
 item.sd-ellener-rod.details = Ellen joe!!!
 item.sd-fractured-core.name = [#a5a5a5]Fractured Core
 item.sd-fractured-core.description = A missing piece, originally used to power structures and more.
+item.sd-lycite.name = Lycite
+item.sd-lycite.description = Used for basic constructions.
 item.sd-moonlit-singularity.name = [#7aa0c0]Moonlit Singularity
 item.sd-moonlit-singularity.description = A singularity that can only be harnessed during night time. Used for making Moonlit Core.
 item.sd-proto-heart.name = Proto Heart
