--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -67,6 +67,8 @@ block.sd-compensator.name = Compensator
 block.sd-compensator.description = ...
 block.sd-lightning-tower.name = Lightning Tower
 block.sd-lightning-tower.description = ...
+block.sd-phalanx.name = Phalanx
+block.sd-phalanx.description = An Anti-Air turret that is capable of handling Prototype class missiles.
 block.sd-arc-shielded-wall.name = Arc Shielded Wall
 block.sd-arc-shielded-wall.description = Improved version of Shielded Wall. Does not deflect bullets upon impact. Deploys a one-time use arc shield that absorbs most projectiles when power is provided. Conducts power.
 block.sd-serenity-wall.name = Serenity Wall
