--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -9,6 +9,8 @@ status.sd-impaired.name = Impaired
 status.sd-impaired.description = ...
 status.sd-juggernaut.name = Juggernaut
 status.sd-juggernaut.description = ...
+status.sd-paralyze.name = Paralyze
+status.sd-paralyze.description = ...
 status.sd-typhoon.name = Typhoon
 status.sd-typhoon.description = ...
 status.sd-super-typhoon.name = Super Typhoon
