--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -49,7 +49,7 @@ item.sd-solar-singularity.description = A singularity that can only be harnessed
 #liquids
 
 liquid.sd-absolute-zero.name = Absolute Zero
-liquid.sd.abolsute-zero.description = A liquid that is colder than Cryofluid.
+liquid.sd.absolute-zero.description = A liquid that is colder than Cryofluid.
 liquid.sd-lumina.name = Lumina
 liquid.sd-lumina.description = A viscous liquid that endlessly spreads without a stop.
 liquid.sd-vitrum-fusile.name = Vitrum Fusile
