--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -5,10 +5,14 @@ status.sd-corruption.name = Corruption
 status.sd-corruption.description = ...
 status.sd-death-mark.name = Death Mark
 status.sd-death-mark.description = ...
+status.sd-deep-freeze.name = Deep Freeze
+status.sd-deep-freeze.description = ...
 status.sd-impaired.name = Impaired
 status.sd-impaired.description = ...
 status.sd-juggernaut.name = Juggernaut
 status.sd-juggernaut.description = ...
+status.sd-overlocked.name = Overlocked
+status.sd-overlocked.description = ...
 status.sd-paralyze.name = Paralyze
 status.sd-paralyze.description = ...
 status.sd-typhoon.name = Typhoon
