--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -73,6 +73,8 @@ block.sd-serenite-crucible.name = Serenite Crucible
 block.sd-serenite-crucible.description = A crucible that crushes down Serenite Powder into pure Serenite.
 block.sd-compensator.name = Compensator
 block.sd-compensator.description = ...
+block.sd-impact-driver.name = Impact Driver
+block.sd-impact-driver.description = Mass Driver but as a turret.
 block.sd-lightning-tower.name = Lightning Tower
 block.sd-lightning-tower.description = ...
 block.sd-phalanx.name = Phalanx
